<resources>
    <string name="app_name">Interval</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="workout_maker">Workout maker</string>
    <string name="workout">Workout</string>
    <string name="exercise">Exercise</string>
    <string name="title_new">New workout</string>
    <string name="title_saved">Saved workouts</string>
    <string name="title_start_workout">Start workout</string>
    <string name="done">Done</string>
    <string name="time_format">%d:%02ds</string>
    <string name="time_format_minutes_only">%dm</string>
    <string name="time_format_seconds_only">%ds</string>
    <string name="save">Save</string>
    <string name="save_workout_as">Save workout as</string>
    <string name="pause">Pause</string>
    <string name="repetitions">Repetitions</string>
    <string name="pause_between">Pause between: %s</string>
    <string name="pause_between_exercises">Pause between exercises</string>
    <string name="total_time">Total time: %s</string>
    <string name="times">Repetitions: %dx</string>
    <string name="skip">Skip</string>
    <string name="new_workout">Create new workout</string>
    <string name="repetitions_amount">Repetitions %dx</string>
    <string name="pause_time">Pause time %s</string>

    <string name="pull_ups">Pull-ups</string>
    <string name="push_ups">Push-ups</string>
    <string name="sit_ups">Sit-ups</string>
    <string name="high_jumps">High jumps</string>
    <string name="stretch">Stretch</string>

    <string name="create_exercise">New exercise</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved %s</string>
    <string name="error_could_not_save">Error! Could not save</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="could_not_sync">Could not sync save file, the workouts you deleted may appear again next time you open this app</string>
    <string name="remove">Remove</string>
    <string name="well_done">Well done</string>
    <string name="back_to_menu">Menu</string>
    <string name="untitled">Untitled</string>
    <string name="choose_workout">Choose workout</string>
    <string name="example">Example</string>
    <string name="already_used">This name is already in use</string>
    <string name="choose_exercise">Choose exercise</string>
    <string name="show_more">Show more</string>
    <string name="qr_scan">Scan QR</string>
    <string name="share_via_qr">Share via QR</string>
    <string name="qr_step1">Step 1: Open interval-app on another phone</string>
    <string name="qr_step2">Step 2: Click the QR-code in the top-bar</string>
    <string name="qr_step3">Step 3: Direct the camera towards the symbol below</string>
    <string name="error_could_not_generate_qr">Could not generate QR-code (sorry)</string>
    <string name="image_of_check">Image of check</string>
    <string name="play">Play</string>
    <string name="time_for_block">Time for block</string>
    <string name="warning">Warning</string>
    <string name="qr_explanation">QR-code of workout</string>
    <string name="close">Close</string>
    <string name="starts_in">Workout starts in</string>
    <string name="err_could_not_load_workouts">Could not load workouts, shutting down</string>
    <string name="hint_exercise">Name of exercise</string>
    <string name="hint_workout">Name of workout</string>
    <string name="err_camera_not_allowed">Cannot scan bar-code without access to camera</string>
    <string name="err_camera_setup">Something went wrong when setting up the camera</string>
    <string name="cancel">Cancel</string>
    <string name="vibration">Vibration</string>
    <string name="mark_items_to_remove">Mark the items you want to remove</string>
    <string name="warn_many_blocks_qr">It may be impossible to scan a workout this long!</string>
    <string name="dismiss">Dismiss</string>
</resources>
