<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="1dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/workout_details"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pauseTime"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfRepetitions"
            android:textAlignment="center"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/blocks"
        app:layout_constraintTop_toBottomOf="@+id/workout_details"
        app:layout_constraintBottom_toTopOf="@id/button_row"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button_row"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/button_edit"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:tint="@color/white"
            android:backgroundTint="@color/rich_blue"
            android:scaleType="fitCenter"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/edit"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/button_qr"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_qr_white"
            android:backgroundTint="@color/rich_blue_2"
            android:scaleType="fitCenter"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/share_via_qr"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/button_play"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:src="@drawable/ic_play_arrow"
            android:tint="@color/white"
            android:scaleType="fitCenter"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/play"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>